# MedAware-AI

./: README.md  next.config.mjs  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/analyze/: route.ts
app/api/drug-interaction/: route.ts
app/api/ocr/: route.ts
app/api/safety-analysis/: route.ts
components/: camera-capture.tsx  drug-interaction.tsx  image-uploader.tsx  medicine-results-enhanced.tsx  medicine-results.tsx
lib/: ai-safety-analyzer.ts  local-rules.ts  medical-simplifier.ts  medicine-analyzer.ts  medicine-database.ts  medicine-matcher.ts  ocr-utils.ts  simplifier-utils.ts
scripts/: demo_ocr.py  extract_medicine_ocr.py  pyproject.toml
